--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
-* linguist-vendored
-*.js linguist-vendored=false
-*.html linguist-vendored=false
-*.css linguist-vendored=false
+*.py linguist-detectable=true
+*.js linguist-detectable=false
+*.html linguist-detectable=false
+*.xml linguist-detectable=false
